# Core

./: .gitignore  .gitmodules  CMakeLists.txt  Instrução_Interface.txt  README.md  build_core.sh  init_softwares_SSL.txt  install_packages.sh  intrucoes.txt  iris_server.sh  rm_build.sh  run.sh  run_ALL.sh  run_ALL_our.sh  run_with_simulator.sh
Hud_Version1.0/: Instrução  lcm_handler.py  main.py  style.qss
caronte/: CMakeLists.txt
caronte/src/: GC.cpp  autoref.cpp  main.cpp  socket_connect.cpp  tartarus.cpp  vision.cpp  vision_master.cpp
caronte/src/include/: GC.hpp  autoref.hpp  socket_connect.hpp  tartarus.hpp  vision.hpp  vision_master.hpp
data_lcm/: Makefile  autoref.lcm  data_autoref.lcm  data_ia.lcm  data_tartarus.lcm  data_vision.lcm  game_controller.lcm  tartarus.lcm
data_lcm/data/: autoref.hpp  detection_balls.hpp  detection_balls_tracked.hpp  detection_geometry.hpp  detection_robots.hpp  detection_robots_tracked.hpp  game_controller.hpp  ia.hpp  kicked_ball_tracked.hpp  robot.hpp  robot_parameters.hpp  tartarus.hpp  team_info.hpp  vision.hpp
hades/: CMakeLists.txt  README.md
hades/src/: handlers.cpp  main.cpp
hades/src/c_trajectory/: C_trajectory.cpp  C_trajectory.h
hades/src/c_trajectory/geometry/: Circle.cpp  Circle.h  Rectangle.cpp  Rectangle.h  Vetop.cpp  Vetop.h  circle.cpp  circle.h  rectangle.cpp  rectangle.h
hades/src/include/: handlers.cpp  handlers.hpp
hades/src/team/: Leader.cpp  Leader.h  Robot.cpp  Robot.h  RobotCalibration.cpp  RobotCalibration.h  RobotController.cpp  RobotController.h  Robot_controller.cpp  Robot_controller.h  TeamInfo.cpp  TeamInfo.h  leader.cpp  leader.h  robot.cpp  robot.h  team_info.cpp  team_info.h
hades/src/team/actions/: roles.cpp
hades/src/team/geometry/: Area.cpp  Area.h  AreaCircular.cpp  AreaCircular.h  AreaRectangular.cpp  AreaRectangular.h  Ball.cpp  Ball.h  CircularShadow.cpp  CircularShadow.h  Field.cpp  Field.h  LineSegment.cpp  LineSegment.h  Point.cpp  Point.h  RectangularShadow.cpp  RectangularShadow.h  Shadow.cpp  Shadow.h  Vector2d.cpp  Vector2d.h  VisibilityGraph.cpp  VisibilityGraph.h  WorldModel.cpp  WorldModel.h  geometry.h  world.cpp  world.h  world_model.cpp  world_model.h
hades/src/team/plays/: PlayAttack.cpp  PlayAttack.h  PlayBase.cpp  PlayBase.h  PlayDebug.cpp  PlayDebug.h  PlayDefense.cpp  PlayDefense.h  PlayHalt.cpp  PlayHalt.h  PlayOurFreeKick.cpp  PlayOurFreeKick.h  PlayOurKickOff.cpp  PlayOurKickOff.h  PlayOurPenalty.cpp  PlayOurPenalty.h  PlayTheirKickOff.cpp  PlayTheirKickOff.h  PlayTheirPenalty.cpp  PlayTheirPenalty.h  play_attack.cpp  play_attack.h  play_debug.cpp  play_debug.h  play_goal_keeper.cpp  play_goal_keeper.h  plays.h
hades/src/team/roles/: RoleBase.cpp  RoleBase.h  RoleCircularTrajectory.cpp  RoleCircularTrajectory.h  RoleDefender.cpp  RoleDefender.h  RoleFreeKicker.cpp  RoleFreeKicker.h  RoleGoalKeeper.cpp  RoleGoalKeeper.h  RoleHalted.cpp  RoleHalted.h  RoleKickOffGoalKeeper.cpp  RoleKickOffGoalKeeper.h  RoleKickOffKicker.cpp  RoleKickOffKicker.h  RoleKickOffSupport.cpp  RoleKickOffSupport.h  RoleMarker.cpp  RoleMarker.h  RoleMidField.cpp  RoleMidField.h  RolePenaltier.cpp  RolePenaltier.h  RoleRetaker.cpp  RoleRetaker.h  RoleSquaredTrajectory.cpp  RoleSquaredTrajectory.h  RoleStriker.cpp  RoleStriker.h  RoleSupport.cpp  RoleSupport.h  RoleWatcher.cpp  RoleWatcher.h  defender.cpp  goal_keeper.cpp  halted.cpp  kickoff_goal_keeper.cpp  kickoff_kicker.cpp  kickoff_support.cpp  (+3 more)
hades/src/team/skills/: SkillBase.cpp  SkillBase.h  SkillCushion.cpp  SkillCushion.h  SkillKick.cpp  SkillKick.h  SkillMoveTo.cpp  SkillMoveTo.h  SkillStop.cpp  SkillStop.h  SkillTurnTo.cpp  SkillTurnTo.h  kick.cpp  move_to.cpp  skills.h  stop.cpp  turn_to.cpp
hades/src/team/tactics/: TacticBase.cpp  TacticBase.h  TacticBlockBall.cpp  TacticBlockBall.h  TacticFollowTrajectory.cpp  TacticFollowTrajectory.h  TacticIntercept.cpp  TacticIntercept.h  TacticKeepLocation.cpp  TacticKeepLocation.h  TacticKeepXLine.cpp  TacticKeepXLine.h  TacticMark.cpp  TacticMark.h  TacticPositionAndKick.cpp  TacticPositionAndKick.h  follow_trajectory.cpp  keep_a_location.cpp  keep_x_line.cpp  position_and_kick_to.cpp  tactics.h
hades_python/: handler.py
hades_python/data/: __init__.py  autoref.py  detection_balls_tracked.py  detection_robots_tracked.py  game_controller.py  ia.py  kicked_ball_tracked.py  tartarus.py
hermes/: CMakeLists.txt
hermes/src/: control_grsim.cpp  main.cpp
hermes/src/include/: control_grsim.hpp  esp.cpp  esp.hpp  esp_connect.cpp  handler.cpp  handler.hpp  manual_control.cpp  manual_control.hpp  send_to_grsim.cpp  send_to_grsim.hpp  send_to_robots.cpp  send_to_robots.hpp  socket_connect.cpp  socket_connect.hpp  stm.cpp  stm.hpp  stm_connect.cpp  teclado.cpp  teclado.hpp
iris/src/: DataModel.py  LCMHandler.py  main.py
iris/src/data/: __init__.py  detection_balls.py  detection_geometry.py  detection_robots.py  ia.py  robot.py  tartarus.py  team_info.py  vision.py
iris/src/qml/: Main.qml
iris/web_ui/: IrisAndServer.sh  index.html  instruções.txt  package-lock.json  package.json
iris/web_ui/src/: App.tsx  types.ts  utils.ts
iris/web_ui/src/backend/: lcm_flask_server.py  server.js  server.py  test_lcm_receive.py
iris/web_ui/src/backend/lcm_cpp_server/: main.cpp
iris/web_ui/src/backend/lcm_cpp_server/handlers/: handlers.cpp  handlers.hpp
iris/web_ui/src/components/: DataView.tsx  DataViewAll.tsx  FieldSVG.tsx  FieldView.tsx  MenuBar.tsx  MenuButton.tsx  TopMenuBar.tsx  UtilityMenu.tsx
iris/web_ui/src/components/sections/: CompetitionSection.tsx  DiagramSection.tsx  FieldSection.tsx  GCSection.tsx  HadesSection.tsx  SkillsSection.tsx  TartarusSection.tsx  VisionSection.tsx
iris/web_ui/src/components/sections/templates/: EventsBallLeftFieldTemplate.tsx  EventsFoulsTemplate.tsx  EventsGoalTempalte.tsx  EventsOthersTemplate.tsx  IrisGCTemplate.tsx  (+1 more)
iris/web_ui/src/data/: competitionData.ts  fieldDimensions.ts  initialData.ts
iris/web_ui/src/hooks/: useFetchLoop.ts  useTartarusState.ts
proto/: ssl_vision_detection_tracked.proto  ssl_vision_wrapper_tracked.proto
(+10 files in other folders)
